--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^23.7.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
